<resources>
    <string name="app_name">GoalTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="to_do_list">To do list</string>
    <string name="statistics">Statistics</string>
    <string name="goals">Goals</string>
    <string name="settings">Settings</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="add">add</string>
    <string name="create">create</string>
    <string name="search">search</string>
    <string name="to_do_list_main_menu">to do list</string>
    <string name="daily_goals_button">daily goals button</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="weekly_goals_button">weekly goals button</string>
    <string name="weekly_goals">Weekly Goals</string>
    <string name="monthly_goals_button">monthly goals button</string>
    <string name="monthly_goals">Monthly Goals</string>
    <string name="goal_name">Goal name</string>
    <string name="log_type">Log Type</string>
    <string name="next_day">next_day</string>
    <string name="goal_notes">Goal notes</string>
</resources>
